--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,12 @@ dependencies:
   cloud_firestore: ^0.12.9+4
   provider: ^3.1.0
   google_sign_in: ^4.3.0
+  http: ^0.12.1
+  font_awesome_flutter: ^8.8.1
+  flutter_datetime_picker: ^1.3.8
+  grouped_buttons: ^1.0.4
+  flutter_map: any
+  intl: any
 
 dev_dependencies:
   flutter_test:
