--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   grouped_buttons: ^1.0.4
   flutter_map: any
   intl: any
+  flutter_signin_button: ^1.0.0
 
 dev_dependencies:
   flutter_test:
